[gd_scene load_steps=18 format=2]

[ext_resource path="res://offline_levels/general_scenes/game_over.tscn" type="PackedScene" id=1]
[ext_resource path="res://offline_levels/general_scenes/instructions.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/level_pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/offline_mode_Asset/level_7/hybrid_topology.png" type="Texture" id=4]
[ext_resource path="res://resources/Themes/level7.tres" type="Theme" id=5]
[ext_resource path="res://offline_levels/level7/manager.gd" type="Script" id=6]
[ext_resource path="res://resources/Themes/file_dialog.tres" type="Theme" id=7]
[ext_resource path="res://inventory_system/data/resources/settings_data.tres" type="Resource" id=8]
[ext_resource path="res://scenes/others/reset_timer.tscn" type="PackedScene" id=9]
[ext_resource path="res://offline_levels/result.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/soundtrack/level/submit.wav" type="AudioStream" id=11]
[ext_resource path="res://resources/Themes/instruction.tres" type="Theme" id=12]
[ext_resource path="res://resources/offline_mode_Asset/level_7/17.png" type="Texture" id=13]
[ext_resource path="res://resources/offline_mode_Asset/level_7/19.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="GDScript" id=4]
script/source = "extends TextureRect

export (String) var content
"

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
topology_image = NodePath("topology_image")
number_label = NodePath("counter/current_number")
star_button = NodePath("options_container/star")
bus_button = NodePath("options_container/bus")
ring_button = NodePath("options_container/ring")
mesh_button = NodePath("options_container/mesh")
hybrid_button = NodePath("options_container/hybrid")
gameover_popup = NodePath("popup_layer/game_over")
gameover_indicator = NodePath("popup_layer/game_over/main_popup/indicator")
gameover_score = NodePath("popup_layer/game_over/main_popup/score")
gameover_next = NodePath("popup_layer/game_over/main_popup/GridContainer/next")
gameover_retry = NodePath("popup_layer/game_over/main_popup/GridContainer/retry")
crowns = NodePath("popup_layer/game_over/main_popup/crowns")
gameover_anim = NodePath("popup_layer/game_over/AnimationPlayer")
celebration = NodePath("popup_layer/game_over/AnimationPlayer/Sprite")
audioplayer = NodePath("popup_layer/game_over/AudioStreamPlayer")
tutorial_player = NodePath("popup_layer/instructions/main_popup/AnimationPlayer")
instruction_sprite = NodePath("popup_layer/instructions/main_popup/AnimationPlayer/level7")
net1_skills = NodePath("popup_layer/game_over/main_popup/net1_skills")
coins = NodePath("popup_layer/game_over/main_popup/GridContainer2/coins")
result_anim = NodePath("animation_player/AnimationPlayer")
mascot = NodePath("animation_player/AnimationPlayer/correct")
bg = NodePath("animation_player/ColorRect")
settings_data = ExtResource( 8 )

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer" type="CanvasLayer" parent="."]

[node name="pause" parent="popup_layer" instance=ExtResource( 3 )]

[node name="game_over" parent="popup_layer" instance=ExtResource( 1 )]
visible = false

[node name="instructions" parent="popup_layer" instance=ExtResource( 2 )]

[node name="content" parent="popup_layer/instructions/main_popup" index="1"]
margin_bottom = 30.0
rect_min_size = Vector2( 900, 230 )
text = "You'll be presented with images representing different network setups. Your task is to identify the network topology shown in each picture. Choose the correct topology from the options provided. Take note that you only have a limited time to make your selection. Good luck! Let's see if you can identify these network topologies correctly!"

[node name="AnimationPlayer" parent="popup_layer/instructions/main_popup" index="2"]
playback_speed = 0.25
anims/RESET = SubResource( 1 )
anims/animation = SubResource( 2 )

[node name="Sprite" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="0"]
visible = false

[node name="level3" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="1"]
visible = false

[node name="level4" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="2"]
visible = false

[node name="level5" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="3"]
visible = false

[node name="level8" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="5"]
visible = false

[node name="level6" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="6"]
visible = false

[node name="level2" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="7"]
visible = false

[node name="bg" type="NinePatchRect" parent="."]
margin_right = 1923.0
margin_bottom = 1082.0
texture = ExtResource( 13 )

[node name="image_bg" type="NinePatchRect" parent="."]
margin_left = 44.0
margin_top = 168.0
margin_right = 794.0
margin_bottom = 918.0
texture = ExtResource( 14 )

[node name="topology_image" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 95.0
margin_top = -325.0
margin_right = 745.0
margin_bottom = 325.0
rect_min_size = Vector2( 650, 650 )
texture = ExtResource( 4 )
expand = true
script = SubResource( 4 )

[node name="options_container" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -979.0
margin_top = -337.0
margin_right = -279.0
margin_bottom = 513.0
custom_constants/separation = 50

[node name="star" type="Button" parent="options_container"]
margin_right = 700.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
theme = ExtResource( 5 )
text = "Star Topology"

[node name="bus" type="Button" parent="options_container"]
margin_top = 150.0
margin_right = 700.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
theme = ExtResource( 5 )
text = "Bus Topology"

[node name="ring" type="Button" parent="options_container"]
margin_top = 300.0
margin_right = 700.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
theme = ExtResource( 5 )
text = "Ring Topology"

[node name="mesh" type="Button" parent="options_container"]
margin_top = 450.0
margin_right = 700.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
theme = ExtResource( 5 )
text = "Mesh Topology"

[node name="hybrid" type="Button" parent="options_container"]
margin_top = 600.0
margin_right = 700.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
theme = ExtResource( 5 )
text = "Hybrid Topology"

[node name="counter" type="HBoxContainer" parent="."]
margin_left = 17.0
margin_top = 16.0
margin_right = 249.0
margin_bottom = 71.0

[node name="Label" type="Label" parent="counter"]
margin_right = 120.0
margin_bottom = 55.0
theme = ExtResource( 7 )
text = "Score:"

[node name="current_number" type="Label" parent="counter"]
margin_left = 124.0
margin_right = 147.0
margin_bottom = 55.0
theme = ExtResource( 7 )
text = "1"

[node name="Label2" type="Label" parent="counter"]
margin_left = 151.0
margin_right = 191.0
margin_bottom = 55.0
theme = ExtResource( 7 )
text = "/5"

[node name="animation_player" parent="." instance=ExtResource( 10 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "SFX"

[node name="instruction" type="Button" parent="."]
margin_left = 1805.0
margin_top = 967.0
margin_right = 1905.0
margin_bottom = 1067.0
theme = ExtResource( 12 )

[node name="manager" parent="." instance=ExtResource( 9 )]

[connection signal="pressed" from="popup_layer/game_over/main_popup/GridContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="popup_layer/game_over/main_popup/GridContainer/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="options_container/star" to="." method="_on_star_pressed"]
[connection signal="pressed" from="options_container/bus" to="." method="_on_bus_pressed"]
[connection signal="pressed" from="options_container/ring" to="." method="_on_ring_pressed"]
[connection signal="pressed" from="options_container/mesh" to="." method="_on_mesh_pressed"]
[connection signal="pressed" from="options_container/hybrid" to="." method="_on_hybrid_pressed"]
[connection signal="pressed" from="instruction" to="." method="_on_instruction_pressed"]

[editable path="popup_layer/pause"]
[editable path="popup_layer/pause/CanvasLayer/settings"]
[editable path="popup_layer/game_over"]
[editable path="popup_layer/instructions"]
[editable path="animation_player"]
